--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,7 @@ img { width: auto; max-width: 100%; height: auto; margin: 0; padding: 0; border-
 .footer-widget ul li i { margin-right: 15px; color: #808080; font-size: 20px; }
 .footer-widget .form-control { color: #808080; background-color: transparent; border-bottom: 1px solid #808080; border-radius: 0px; margin-top: -10px; }
 .footer-social { margin-top: 50px; }
-.footer-social a span { font-size: 20px; padding-right: 12px; color: #58595a; }
+.footer-social a span { font-size: 40px; padding-right: 12px; color: #58595a; }
 .footer-social a span:hover { color: #a5d897; }
 
 /*-------------- tiny footer ------------*/
@@ -834,4 +834,10 @@ img { width: auto; max-width: 100%; height: auto; margin: 0; padding: 0; border-
     .error-meta { font-size: 12px; font-weight: 700; letter-spacing: 24px; text-transform: uppercase; display: block; margin-top: 5px; position: absolute; left: 30px; }
     .error-text { font-size: 10px; position: absolute; margin-top: 30px; font-weight: 400; }
     .error-btn { position: absolute; margin-top: 120px; left: 10px; }
+}
+
+.external{
+    color: #808080;
+    font-size: 30px;
+    padding-right:20px;
 }
