--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ label { }
 .textarea.form-control { }
 .required { }
 .input-group, .form-group { }
-.form-control { font-style: normal; text-transform: uppercase; letter-spacing: 1px; border: 0; color: #767a7e; font-size: 12px; font-weight: 600; width: 100%; height: 50px; padding: 10px 0px; line-height: 1.42857143; background-image: none; background-color: transparent; border-radius: 0px; margin-bottom: 10px; -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); border-bottom: 2px solid #d3d3d3; }
+.form-control { font-style: normal; letter-spacing: 1px; border: 0; color: #767a7e; font-size: 12px; font-weight: 600; width: 100%; height: 50px; padding: 10px 0px; line-height: 1.42857143; background-image: none; background-color: transparent; border-radius: 0px; margin-bottom: 10px; -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075); border-bottom: 2px solid #d3d3d3; }
 .input-group { position: relative; display: table; border-collapse: separate; }
 input[type=checkbox], input[type=radio] { margin: 8px 0 0; margin-top: 1px\9; line-height: normal; }
 .input-group-addon { border-radius: 0px; }
@@ -840,4 +840,9 @@ img { width: auto; max-width: 100%; height: auto; margin: 0; padding: 0; border-
     color: #808080;
     font-size: 30px;
     padding-right:20px;
+}
+
+.star {
+    color: red;
+     display: none;
 }
